# coeus-adapter

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
external_libraries/rapidjson/: CMakeLists.txt
external_libraries/spdlog/: CMakeLists.txt
include/coeus/: HermesEngine.h
include/common/: SQlite.h  Timer.h  VariableMetadata.h
include/comms/: Bucket.h  Hermes.h
src/: CMakeLists.txt  hermes_engine.cc
tasks/: CMakeLists.txt  chimaera_repo.yaml
tasks/coeus_mdm/include/coeus_mdm/: coeus_mdm.h  coeus_mdm.temp_h  coeus_mdm_client.h  coeus_mdm_lib_exec.h  coeus_mdm_methods.compiled.yaml  coeus_mdm_methods.h  coeus_mdm_methods.yaml  coeus_mdm_tasks.h  coeus_mdm_tasks.temp_h
tasks/coeus_mdm/src/: CMakeLists.txt  coeus_mdm.cc  coeus_mdm.temp_cc  coeus_mdm_client.cc  coeus_mdm_monitor.py  coeus_mdm_runtime.cc
tasks/rankConsensus/include/rankConsensus/: rankConsensus.h  rankConsensus.temp_h  rankConsensus_client.h  rankConsensus_lib_exec.h  rankConsensus_methods.compiled.yaml  rankConsensus_methods.h  rankConsensus_methods.yaml  rankConsensus_tasks.h  rankConsensus_tasks.temp_h
tasks/rankConsensus/src/: CMakeLists.txt  rankConsensus.cc  rankConsensus.temp_cc  rankConsensus_client.cc  rankConsensus_monitor.py  rankConsensus_runtime.cc
test/jarvis/jarvis_coeus/jarvis_coeus/adios2_gray_scott/: README.md  pkg.py
test/jarvis/jarvis_coeus/jarvis_coeus/adios2_gray_scott_2/: pkg.py
test/jarvis/jarvis_coeus/jarvis_coeus/adios2_gray_scott_3/: pkg.py
test/jarvis/jarvis_coeus/jarvis_coeus/adios_hashing/: README.md  pkg.py
test/jarvis/jarvis_coeus/jarvis_coeus/hashing_compare/: pkg.py
test/jarvis/jarvis_coeus/jarvis_coeus/lammps/: pkg.py
test/jarvis/jarvis_coeus/jarvis_coeus/lammps/config/: hermes.xml
test/jarvis/jarvis_coeus/pipelines/: adios_hashing hermes.yaml  adios_hashing.yaml  lammps_hermes.yaml
test/jarvis_coeus/jarvis_coeus/adios2_gray_scott/: pkg.py
test/jarvis_coeus/jarvis_coeus/adios2_gray_scott_3/: pkg.py
test/jarvis_coeus/jarvis_coeus/hashing_compare/: pkg.py
test/jarvis_coeus/jarvis_coeus/hashing_compare/config/: adios2.xml
test/mocks/: CMakeLists.txt
test/real_apps/gray-scott/: CMakeLists.txt
test/real_apps/gray-scott/analysis/: compare.cpp  curvature.cpp  find_blobs.cpp  hashing.cpp  isosurface.cpp  pdf-calc.cpp
test/real_apps/gray-scott/common/: timer.hpp
test/real_apps/gray-scott/simulation/: gray-scott.cpp  main.cpp  writer.cpp
test/real_apps/io_comp/: CMakeLists.txt
test/real_apps/metadata_comp/: CMakeLists.txt
test/real_apps/operator_comp/: CMakeLists.txt
test/recup_evaluation/: README.md  case1.sh  case1_fixed_L_stepIncrease.sh  case1_scale_L.sh  case2.sh  case2_fuxed_L_step_increase.sh  case2_scale_L.sh  case3.sh  case3_fiexed_L_step_increase.sh  case3_scale_L.sh
test/unit/MPI/: CMakeLists.txt
test/unit/sqlite/: CMakeLists.txt
